Move the HTTP endpoint creation into pkg/global
Right now each of the bb_* binaries handrolls its own web server code.
Even worse, binaries like bb_scheduler and bb_browser offer a single
HTTP server for both the metrics, pprof and their web UIs. Let's
decouple this.

This has the advantage that if we ever want to make changes to the
behaviour of the HTTP server of all of our binaries, we can now do this
in one place. It also consolidates the dependency on Gorilla mux.

--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -9,7 +9,9 @@ go_library(
         "//pkg/proto/configuration/global:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
+        "@com_github_gorilla_mux//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/push:go_default_library",
         "@io_opencensus_go//plugin/ocgrpc:go_default_library",
         "@io_opencensus_go//stats/view:go_default_library",
