Let the gRPC client dial to backends lazily
Right now bb_storage will create all gRPC channels immediately on
startup. This is typically desirable, except when using features such as
DemultiplexingBlobAccess. It's pretty likely that people end up
declaring more backends than used in practice.

This at least defers the creation of gRPC channels to the point where
they end up being used. In an ideal world, go-grpc would have integrated
support for doing this, and closing connections when they remain idle
for too long. Unfortunately, no such feature seems to be offered.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -140,6 +140,7 @@ gomock(
     out = "grpc.go",
     interfaces = [
         "Authenticator",
+        "ClientDialer",
         "ClientFactory",
     ],
     library = "//pkg/grpc:go_default_library",
