--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -7,9 +7,11 @@ go_library(
         "any_authenticator.go",
         "authenticator.go",
         "base_client_factory.go",
+        "client_dialer.go",
         "client_factory.go",
         "deduplicating_client_factory.go",
         "deny_authenticator.go",
+        "lazy_client_dialer.go",
         "metadata_adding_interceptor.go",
         "metadata_forwarding_and_reusing_interceptor.go",
         "metadata_forwarding_interceptor.go",
@@ -52,6 +54,7 @@ go_test(
         "any_authenticator_test.go",
         "deduplicating_client_factory_test.go",
         "deny_authenticator_test.go",
+        "lazy_client_dialer_test.go",
         "metadata_adding_interceptor_test.go",
         "metadata_forwarding_and_reusing_interceptor_test.go",
         "metadata_forwarding_interceptor_test.go",
