Move handling of the 'schedulers' option into its own function
Having this factored out is useful in case someone wants to build other
binaries that have an REv2 client in them. Those can now take the same
style of configuration as bb_storage.

--- a/pkg/proto/configuration/bb_storage/BUILD.bazel
+++ b/pkg/proto/configuration/bb_storage/BUILD.bazel
@@ -8,6 +8,7 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:blobstore_proto",
+        "//pkg/proto/configuration/builder:builder_proto",
         "//pkg/proto/configuration/global:global_proto",
         "//pkg/proto/configuration/grpc:grpc_proto",
     ],
@@ -20,6 +21,7 @@ go_proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:go_default_library",
+        "//pkg/proto/configuration/builder:go_default_library",
         "//pkg/proto/configuration/global:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
     ],
