--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "build_queue.go",
+        "configuration.go",
         "demultiplexing_build_queue.go",
         "forwarding_build_queue.go",
         "non_executable_build_queue.go",
@@ -13,6 +14,8 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/digest:go_default_library",
+        "//pkg/grpc:go_default_library",
+        "//pkg/proto/configuration/builder:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
