--- a/pkg/proto/configuration/builder/BUILD.bazel
+++ b/pkg/proto/configuration/builder/BUILD.bazel
@@ -19,6 +19,7 @@ go_proto_library(
 
 go_library(
     name = "go_default_library",
+    srcs = ["doc.go"],
     embed = [":builder_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/builder",
     visibility = ["//visibility:public"],
