--- a/pkg/proto/configuration/replicator/BUILD.bazel
+++ b/pkg/proto/configuration/replicator/BUILD.bazel
@@ -5,13 +5,13 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 go_library(
     name = "go_default_library",
     srcs = ["doc.go"],
-    embed = [":bb_replicator_go_proto"],
-    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_replicator",
+    embed = [":replicator_go_proto"],
+    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/replicator",
     visibility = ["//visibility:public"],
 )
 
 proto_library(
-    name = "bb_replicator_proto",
+    name = "replicator_proto",
     srcs = ["bb_replicator.proto"],
     visibility = ["//visibility:public"],
     deps = [
@@ -22,9 +22,9 @@ proto_library(
 )
 
 go_proto_library(
-    name = "bb_replicator_go_proto",
-    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_replicator",
-    proto = ":bb_replicator_proto",
+    name = "replicator_go_proto",
+    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/replicator",
+    proto = ":replicator_proto",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:go_default_library",
