--- a/pkg/proto/configuration/storage/BUILD.bazel
+++ b/pkg/proto/configuration/storage/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
-    name = "bb_storage_proto",
+    name = "storage_proto",
     srcs = ["bb_storage.proto"],
     visibility = ["//visibility:public"],
     deps = [
@@ -15,9 +15,9 @@ proto_library(
 )
 
 go_proto_library(
-    name = "bb_storage_go_proto",
-    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_storage",
-    proto = ":bb_storage_proto",
+    name = "storage_go_proto",
+    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/storage",
+    proto = ":storage_proto",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:go_default_library",
@@ -30,7 +30,7 @@ go_proto_library(
 go_library(
     name = "go_default_library",
     srcs = ["doc.go"],
-    embed = [":bb_storage_go_proto"],
-    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_storage",
+    embed = [":storage_go_proto"],
+    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/storage",
     visibility = ["//visibility:public"],
 )
