Add a testutil package with comparison functions for Protobuf types
The upcoming versions of the Protobuf package contain some recursive
references internally, thereby causing testify to hang when doing
Protobuf comparisons.

Considering that using require.Equal() on Protobuf based types is
already suboptimal (due to hidden fields), let's add some proper helper
types. This helps us eliminate constructs like
require.True(proto.Equal()), which have the downside of not showing
anything useful in the test logs at all. These helper functions can use
jsonpb to format the Protobufs prior to displaying them.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -64,6 +64,7 @@ go_test(
     deps = [
         "//internal/mock:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
+        "//pkg/testutil:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@io_bazel_rules_go//proto/wkt:empty_go_proto",
