--- a/pkg/blobstore/grpcservers/BUILD.bazel
+++ b/pkg/blobstore/grpcservers/BUILD.bazel
@@ -36,9 +36,9 @@ go_test(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/proto/icas:go_default_library",
+        "//pkg/testutil:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@go_googleapis//google/rpc:status_go_proto",
