--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "go_default_library",
+    name = "configuration",
     srcs = [
         "ac_blob_access_creator.go",
         "ac_blob_replicator_creator.go",
@@ -17,29 +17,29 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/configuration",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/blobstore:go_default_library",
-        "//pkg/blobstore/completenesschecking:go_default_library",
-        "//pkg/blobstore/grpcclients:go_default_library",
-        "//pkg/blobstore/local:go_default_library",
-        "//pkg/blobstore/mirrored:go_default_library",
-        "//pkg/blobstore/readcaching:go_default_library",
-        "//pkg/blobstore/readfallback:go_default_library",
-        "//pkg/blobstore/replication:go_default_library",
-        "//pkg/blobstore/sharding:go_default_library",
-        "//pkg/blockdevice:go_default_library",
-        "//pkg/clock:go_default_library",
-        "//pkg/cloud/aws:go_default_library",
-        "//pkg/digest:go_default_library",
-        "//pkg/filesystem:go_default_library",
-        "//pkg/grpc:go_default_library",
-        "//pkg/proto/configuration/blobstore:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
-        "@com_github_go_redis_redis_v8//:go_default_library",
-        "@com_github_go_redis_redisext//:go_default_library",
+        "//pkg/blobstore",
+        "//pkg/blobstore/completenesschecking",
+        "//pkg/blobstore/grpcclients",
+        "//pkg/blobstore/local",
+        "//pkg/blobstore/mirrored",
+        "//pkg/blobstore/readcaching",
+        "//pkg/blobstore/readfallback",
+        "//pkg/blobstore/replication",
+        "//pkg/blobstore/sharding",
+        "//pkg/blockdevice",
+        "//pkg/clock",
+        "//pkg/cloud/aws",
+        "//pkg/digest",
+        "//pkg/filesystem",
+        "//pkg/grpc",
+        "//pkg/proto/configuration/blobstore",
+        "//pkg/util",
+        "@com_github_aws_aws_sdk_go//service/s3",
+        "@com_github_go_redis_redis_v8//:redis",
+        "@com_github_go_redis_redisext//:redisext",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
-        "@com_github_google_uuid//:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@com_github_google_uuid//:uuid",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
