--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -1,23 +1,23 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "go_default_library",
+    name = "global",
     srcs = ["apply_configuration.go"],
     importpath = "github.com/buildbarn/bb-storage/pkg/global",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/configuration/global:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/proto/configuration/global",
+        "//pkg/util",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
-        "@com_github_gorilla_mux//:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus/push:go_default_library",
-        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
-        "@io_opencensus_go//stats/view:go_default_library",
-        "@io_opencensus_go//trace:go_default_library",
-        "@io_opencensus_go_contrib_exporter_jaeger//:go_default_library",
-        "@io_opencensus_go_contrib_exporter_prometheus//:go_default_library",
-        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
+        "@com_github_gorilla_mux//:mux",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@com_github_prometheus_client_golang//prometheus/promhttp",
+        "@com_github_prometheus_client_golang//prometheus/push",
+        "@io_opencensus_go//plugin/ocgrpc",
+        "@io_opencensus_go//stats/view",
+        "@io_opencensus_go//trace",
+        "@io_opencensus_go_contrib_exporter_jaeger//:jaeger",
+        "@io_opencensus_go_contrib_exporter_prometheus//:prometheus",
+        "@io_opencensus_go_contrib_exporter_stackdriver//:stackdriver",
     ],
 )
