--- a/internal/mock/aliases/BUILD.bazel
+++ b/internal/mock/aliases/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "go_default_library",
+    name = "aliases",
     srcs = ["aliases.go"],
     importpath = "github.com/buildbarn/bb-storage/internal/mock/aliases",
     visibility = ["//:__subpackages__"],
