--- a/pkg/blockdevice/BUILD.bazel
+++ b/pkg/blockdevice/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "go_default_library",
+    name = "blockdevice",
     srcs = [
         "block_device.go",
         "configuration.go",
@@ -15,41 +15,41 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blockdevice",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/configuration/blockdevice:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "//pkg/proto/configuration/blockdevice",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ] + select({
         "@io_bazel_rules_go//go/platform:android": [
-            "//pkg/util:go_default_library",
-            "@org_golang_x_sys//unix:go_default_library",
+            "//pkg/util",
+            "@org_golang_x_sys//unix",
         ],
         "@io_bazel_rules_go//go/platform:darwin": [
-            "//pkg/util:go_default_library",
-            "@org_golang_x_sys//unix:go_default_library",
+            "//pkg/util",
+            "@org_golang_x_sys//unix",
         ],
         "@io_bazel_rules_go//go/platform:freebsd": [
-            "//pkg/util:go_default_library",
-            "@org_golang_x_sys//unix:go_default_library",
+            "//pkg/util",
+            "@org_golang_x_sys//unix",
         ],
         "@io_bazel_rules_go//go/platform:ios": [
-            "//pkg/util:go_default_library",
-            "@org_golang_x_sys//unix:go_default_library",
+            "//pkg/util",
+            "@org_golang_x_sys//unix",
         ],
         "@io_bazel_rules_go//go/platform:linux": [
-            "//pkg/util:go_default_library",
-            "@org_golang_x_sys//unix:go_default_library",
+            "//pkg/util",
+            "@org_golang_x_sys//unix",
         ],
         "//conditions:default": [],
     }),
 )
 
 go_test(
-    name = "go_default_test",
+    name = "blockdevice_test",
     srcs = ["new_block_device_from_file_test.go"],
-    embed = [":go_default_library"],
+    embed = [":blockdevice"],
     deps = [
-        "@com_github_stretchr_testify//require:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@com_github_stretchr_testify//require",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
