--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "go_default_library",
+    name = "builder",
     srcs = [
         "build_queue.go",
         "configuration.go",
@@ -13,34 +13,34 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/builder",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/digest:go_default_library",
-        "//pkg/grpc:go_default_library",
-        "//pkg/proto/configuration/builder:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/digest",
+        "//pkg/grpc",
+        "//pkg/proto/configuration/builder",
+        "//pkg/util",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
 go_test(
-    name = "go_default_test",
+    name = "builder_test",
     srcs = [
         "demultiplexing_build_queue_test.go",
         "update_enabled_toggling_build_queue_test.go",
     ],
-    embed = [":go_default_library"],
+    embed = [":builder"],
     deps = [
         "//internal/mock:go_default_library",
-        "//pkg/digest:go_default_library",
+        "//pkg/digest",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
-        "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
+        "@com_github_golang_mock//gomock",
+        "@com_github_stretchr_testify//require",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
