--- a/pkg/clock/BUILD.bazel
+++ b/pkg/clock/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "go_default_library",
+    name = "clock",
     srcs = [
         "clock.go",
         "system_clock.go",
