--- a/pkg/eviction/BUILD.bazel
+++ b/pkg/eviction/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "go_default_library",
+    name = "eviction",
     srcs = [
         "configuration.go",
         "fifo_set.go",
@@ -13,20 +13,20 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/eviction",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/configuration/eviction:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "//pkg/proto/configuration/eviction",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
 go_test(
-    name = "go_default_test",
+    name = "eviction_test",
     srcs = [
         "fifo_set_test.go",
         "lru_set_test.go",
         "rr_set_test.go",
     ],
-    embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//require:go_default_library"],
+    embed = [":eviction"],
+    deps = ["@com_github_stretchr_testify//require"],
 )
