--- a/pkg/proto/configuration/bb_replicator/BUILD.bazel
+++ b/pkg/proto/configuration/bb_replicator/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 go_library(
-    name = "go_default_library",
+    name = "bb_replicator",
     embed = [":bb_replicator_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_replicator",
     visibility = ["//visibility:public"],
@@ -26,8 +26,8 @@ go_proto_library(
     proto = ":bb_replicator_proto",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/configuration/blobstore:go_default_library",
-        "//pkg/proto/configuration/global:go_default_library",
-        "//pkg/proto/configuration/grpc:go_default_library",
+        "//pkg/proto/configuration/blobstore",
+        "//pkg/proto/configuration/global",
+        "//pkg/proto/configuration/grpc",
     ],
 )
