--- a/pkg/proto/configuration/bb_storage/BUILD.bazel
+++ b/pkg/proto/configuration/bb_storage/BUILD.bazel
@@ -20,15 +20,15 @@ go_proto_library(
     proto = ":bb_storage_proto",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/configuration/blobstore:go_default_library",
-        "//pkg/proto/configuration/builder:go_default_library",
-        "//pkg/proto/configuration/global:go_default_library",
-        "//pkg/proto/configuration/grpc:go_default_library",
+        "//pkg/proto/configuration/blobstore",
+        "//pkg/proto/configuration/builder",
+        "//pkg/proto/configuration/global",
+        "//pkg/proto/configuration/grpc",
     ],
 )
 
 go_library(
-    name = "go_default_library",
+    name = "bb_storage",
     embed = [":bb_storage_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_storage",
     visibility = ["//visibility:public"],
