--- a/pkg/proto/configuration/blockdevice/BUILD.bazel
+++ b/pkg/proto/configuration/blockdevice/BUILD.bazel
@@ -16,7 +16,7 @@ go_proto_library(
 )
 
 go_library(
-    name = "go_default_library",
+    name = "blockdevice",
     embed = [":blockdevice_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/blockdevice",
     visibility = ["//visibility:public"],
