--- a/pkg/proto/configuration/builder/BUILD.bazel
+++ b/pkg/proto/configuration/builder/BUILD.bazel
@@ -14,11 +14,11 @@ go_proto_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/builder",
     proto = ":builder_proto",
     visibility = ["//visibility:public"],
-    deps = ["//pkg/proto/configuration/grpc:go_default_library"],
+    deps = ["//pkg/proto/configuration/grpc"],
 )
 
 go_library(
-    name = "go_default_library",
+    name = "builder",
     embed = [":builder_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/builder",
     visibility = ["//visibility:public"],
