--- a/pkg/proto/configuration/global/BUILD.bazel
+++ b/pkg/proto/configuration/global/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 go_library(
-    name = "go_default_library",
+    name = "global",
     embed = [":global_go_proto"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/global",
     visibility = ["//visibility:public"],
