--- a/pkg/testutil/BUILD.bazel
+++ b/pkg/testutil/BUILD.bazel
@@ -1,15 +1,15 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "go_default_library",
+    name = "testutil",
     srcs = ["testutil.go"],
     importpath = "github.com/buildbarn/bb-storage/pkg/testutil",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_golang_mock//gomock:go_default_library",
+        "@com_github_golang_mock//gomock",
         "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
         "@com_github_golang_protobuf//proto:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
+        "@com_github_stretchr_testify//require",
+        "@org_golang_google_grpc//status",
     ],
 )
