Enable CI on linux-386
Some people are interested in running Buildbarn on 32-bit systems, such
as the Raspberry Pi. I'm not convinced we should provide automated CI
builds for those platforms (yet). That said, let's enable CI for
linux-386. The advantage of that platform is that we can easily run unit
tests for those, even on a linux-amd64 machine.

This should allow us to more easily find bugs that tend to affect 32-bit
platforms in general. In fact, this change alone already found a bug in
LocalBlobAccess that caused it to perform atomic operations against an
unaligned 64-bit integer.

Related: https://github.com/buildbarn/bb-remote-execution/pull/73

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -69,6 +69,34 @@
                }
             },
             {
+               "name": "linux_386: build and test",
+               "run": "bazel test --test_output=errors --platforms=@io_bazel_rules_go//go/toolchain:linux_386 //..."
+            },
+            {
+               "name": "linux_386: copy bb_replicator",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:linux_386 //cmd/bb_replicator $(pwd)/bb_replicator"
+            },
+            {
+               "name": "linux_386: upload bb_replicator",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_replicator.linux_386",
+                  "path": "bb_replicator"
+               }
+            },
+            {
+               "name": "linux_386: copy bb_storage",
+               "run": "bazel run --run_under cp --platforms=@io_bazel_rules_go//go/toolchain:linux_386 //cmd/bb_storage $(pwd)/bb_storage"
+            },
+            {
+               "name": "linux_386: upload bb_storage",
+               "uses": "actions/upload-artifact@v2-preview",
+               "with": {
+                  "name": "bb_storage.linux_386",
+                  "path": "bb_storage"
+               }
+            },
+            {
                "name": "darwin_amd64: build and test",
                "run": "bazel build --platforms=@io_bazel_rules_go//go/toolchain:darwin_amd64 //..."
             },
