Add a library that wraps all of Go's atomic functions
Go's atomic package is a bit too simple. It requires you to declare your
own integer variables. You then call into free functions to perform the
atomic operations. This has a couple of downsides:

- There is a chance that you accidentally access variables without using
  the atomic functions. This means that you could get corrupted reads.

- The variables may not be aligned properly. Go on 386 only aligns
  64-bit integers at a 4-byte boundary, which isn't sufficient. Atomic
  operations on unaligned variables will cause a crash.

- The free functions are fairly verbose.

Let's introduce simple box types around integers that address all of
these issues. Also port all code in the source tree to use these new
data types.

--- a/pkg/blobstore/mirrored/BUILD.bazel
+++ b/pkg/blobstore/mirrored/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/mirrored",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/atomic:go_default_library",
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/blobstore/replication:go_default_library",
