--- a/pkg/blobstore/buffer/BUILD.bazel
+++ b/pkg/blobstore/buffer/BUILD.bazel
@@ -33,6 +33,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/buffer",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/atomic:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
