--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/local",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/atomic:go_default_library",
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/blockdevice:go_default_library",
