--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -38,6 +38,7 @@ go_library(
         "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
+        "//pkg/filesystem/path:go_default_library",
         "//pkg/proto/blobstore/local:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
@@ -71,6 +72,7 @@ go_test(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
+        "//pkg/filesystem/path:go_default_library",
         "//pkg/proto/blobstore/local:go_default_library",
         "//pkg/testutil:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
