--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -14,7 +14,9 @@ go_library(
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/filesystem",
     visibility = ["//visibility:public"],
-    deps = select({
+    deps = [
+        "//pkg/filesystem/path:go_default_library",
+    ] + select({
         "@io_bazel_rules_go//go/platform:android": [
             "//pkg/util:go_default_library",
             "@org_golang_google_grpc//codes:go_default_library",
@@ -58,8 +60,7 @@ go_test(
     srcs = ["local_directory_test.go"],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/filesystem/path:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
-        "@org_golang_google_grpc//codes:go_default_library",
-        "@org_golang_google_grpc//status:go_default_library",
     ],
 )
