Port all code in the Buildbarn tree to the new RNG package
This means that we use properly seeded random numbers in all places. It
also reduces the amount of locking we perform. For example, eviction.Set
requires locking at higher levels. If we let every set use its own RNG,
there is no need to perform locking at the RNG level.

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -33,6 +33,7 @@ go_library(
         "//pkg/filesystem:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/proto/configuration/blobstore:go_default_library",
+        "//pkg/random:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_go_redis_redis_v8//:go_default_library",
